Se incluyó en el archivo revendedores.html, contenido explicativo para revendedores

--- a/revendedores.html
+++ b/revendedores.html
@@ -29,13 +29,10 @@
         <div class="row">
           <div class="col-7 d-flex align-items-center nosotros">
             <div class="nosotros">
-              <h1 class="text-center display-4">Nosotros</h1>
+              <h1 class="text-center display-4">Revendedores</h1>
               <p class="text-center p-2">
-                Somos una empresa con gente joven e ideas frescas, trabajando constantemente para traerte lo mejor de lo mejor en indumentaria.
-  
-  Nuestros diseños minimalistas son ideales para quienes disfrutan de los sutiles pero increibles detalles de la vida, tanto como nosotros.
-  
-  Nuestras remeras, unicas en su estilo, van a sacar la mejor versión de vos misma. ¿Que esperas para unirte a la onda Monkey?
+                ¿Queres vender los productos con más onda? Escribinos por cualquiera de nuestras redes sociales o al mail info@monkeyargentina.com para enterarte de todo, pasarnos tus pedidos y poder convertite en revendedora o revendedor Monkey.
+                ¿Que esperas para sumarte?
               </p>
             </div>
             <div class="col-5">
