se aplicaron los atributos de OpenGraph a cada uno de los archivos

--- a/contacto.html
+++ b/contacto.html
@@ -9,6 +9,18 @@
     <!--keywords-->
     <meta name="keywords" content="container, logo, form, contacto, datos, email, telefono, mensaje">
 
+    <!--OpenGraph-->
+    
+    <meta property="og:title" content="Venta de ropa con mucha onda">
+    <meta property="og:image" content="../Imagenes/logo.png">    
+    <meta property="og:image:width" content="100%">    
+    <meta property="og:image:height" content="100%">
+    <meta property="og:url" content="monkeyropa.com">
+    <meta property="og:description" content="Venta de ropa con mucha onda">
+    <meta property="og:author" content="Juan Lesieur">
+    <meta property="og:locale" content="es_AR">
+    
+
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
