--- a/kids.html
+++ b/kids.html
@@ -9,6 +9,17 @@
     <meta name="description" content="Venta de ropa, para kids, teens y adultos. Remeras, buzos y accesorios para la moda">
     <!--keywords-->
     <meta name="keywords" content="Remera, chiquitos, Rainbow, Honey Moon, Dino">
+        <!--OpenGraph-->
+    
+        <meta property="og:title" content="Venta de ropa con mucha onda">
+        <meta property="og:image" content="../Imagenes/logo.png">    
+        <meta property="og:image:width" content="100%">    
+        <meta property="og:image:height" content="100%">
+        <meta property="og:url" content="monkeyropa.com">
+        <meta property="og:description" content="Venta de ropa con mucha onda">
+        <meta property="og:author" content="Juan Lesieur">
+        <meta property="og:locale" content="es_AR">
+    
 
 
 
