se incluyó la descripción ALT de todas las imágenes del proyecto

--- a/adultos.html
+++ b/adultos.html
@@ -51,7 +51,7 @@
 
     <section class="d-flex justify-content-around">
         <div class="card" style="width: 18rem;">
-            <img src="Imagenes/Adultos/adultos1.jpg" class="card-img-top" alt="...">
+            <img src="Imagenes/Adultos/adultos1.jpg" class="card-img-top" alt="Remera homero">
             <div class="card-body">
               <h5 class="card-title">Homer</h5>
               <p class="card-text">Sin tele y sin cerveza homero pierde...y se me olvio</p>
@@ -59,7 +59,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="Imagenes/Adultos/adultos2.jpg" class="card-img-top" alt="...">
+            <img src="Imagenes/Adultos/adultos2.jpg" class="card-img-top" alt="Remera Lisa">
             <div class="card-body">
               <h5 class="card-title">Lisa</h5>
               <p class="card-text">Todo este sistema está mal!</p>
@@ -67,7 +67,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="Imagenes/Adultos/adultos3.jpg" class="card-img-top" alt="...">
+            <img src="Imagenes/Adultos/adultos3.jpg" class="card-img-top" alt="Remera Pato Lucas">
             <div class="card-body">
               <h5 class="card-title">Lucas!</h5>
               <p class="card-text">Mami, no quiero ir a la ezzcuela</p>
