--- a/contacto.html
+++ b/contacto.html
@@ -41,7 +41,7 @@
 
     
       <a href="index.html">
-          <img src="Imagenes/logo.png" alt="" class="logo">
+          <img src="Imagenes/logo.png" alt="Logo empresarial" class="logo">
   
       </a>
   
