--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <!--Logo-->
-              <a class="navbar-brand" href="index.html"><img src="Imagenes/logo.png" alt="" class="logo-nav"></a>
+              <a class="navbar-brand" href="index.html"><img src="Imagenes/logo.png" alt="Logo empresarial" class="logo-nav"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -56,12 +56,6 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="productos.html" >
                       Productos
-                    </a>
-                  </li>
-                  <!--Revendedorxs Nav-->
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="revendedores.html" >
-                      Vende nuestros productos!
                     </a>
                   </li>
                 </div>
@@ -86,13 +80,13 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="Imagenes/imagen1.jpeg" class="d-block w-100" alt="img1">
+            <img src="Imagenes/imagen1.jpeg" class="d-block w-100" alt="imagen de presentación">
           </div>
           <div class="carousel-item">
-            <img src="Imagenes/imagen2.jpeg" class="d-block w-100" alt="img2">
+            <img src="Imagenes/imagen2.jpeg" class="d-block w-100" alt="imagen de presentación">
           </div>
           <div class="carousel-item">
-            <img src="Imagenes/imagen3.jpeg" class="d-block w-100" alt="img3">
+            <img src="Imagenes/imagen3.jpeg" class="d-block w-100" alt="imagen de presentación">
           </div>
         </div>
       </div>
@@ -114,7 +108,7 @@ Nuestras remeras, unicas en su estilo, van a sacar la mejor versión de vos mism
             </p>
           </div>
           <div class="col-5">
-            <img src="Imagenes/imagen4.jpeg" alt="" class="img-nosotros">
+            <img src="Imagenes/imagen4.jpeg" alt="" class="Imagen descriptiva de la empresa">
           </div>
           </div>
       </div>
@@ -129,7 +123,7 @@ Nuestras remeras, unicas en su estilo, van a sacar la mejor versión de vos mism
     <footer>
       <!--Medios de pago-->
       <div class="container-footer">
-        <img src="Iconos/mediosdepago.png" alt="" class="medios-pago">
+        <img src="Iconos/mediosdepago.png" alt="Metodos de pago" class="medios-pago">
       </div>
 
     </footer>
@@ -138,7 +132,7 @@ Nuestras remeras, unicas en su estilo, van a sacar la mejor versión de vos mism
     <!--Whatsapp icon-->
 
     <div class="itemFixed">
-      <a href="http://whatsapp.com"><img src="Iconos/whatsapp.png" alt="" class="img-wp"></a>
+      <a href="http://whatsapp.com"><img src="Iconos/whatsapp.png" alt="Comunicación por whatsapp" class="img-wp"></a>
   </div>
      
 
