--- a/productos.html
+++ b/productos.html
@@ -37,7 +37,7 @@
 
     <header>
         <a href="index.html">
-            <img src="Imagenes/logo.png" class="logo" alt="">
+            <img src="Imagenes/logo.png" class="logo" alt="Logo empresarial">
         </a>
     </header>
 
@@ -45,7 +45,7 @@
 
     <section class="d-flex justify-content-around w-100">
       <div class="card" style="width: 18rem;">
-          <a href="kids.html"><img src="Imagenes/Kids/Sin título.png" class="card-img-top" alt="..."></a>
+          <a href="kids.html"><img src="Imagenes/Kids/Sin título.png" class="card-img-top" alt="Remeras para chicos"></a>
           <div class="card-body">
             <p class="card-text">Remeras para los más chiquitos de la familia o amigos!</p>
           
@@ -53,14 +53,14 @@
         </div>
 
         <div class="card" style="width: 18rem;">
-          <a href="teens.html"><img src="Imagenes/Teens/teens.png" class="card-img-top" alt="..."></a>
+          <a href="teens.html"><img src="Imagenes/Teens/teens.png" class="card-img-top" alt="Remeras para adolescentes"></a>
           <div class="card-body">
             <p class="card-text">Remeras con estilo para tu onda y sorprender a tus amigos!</p>
           </div>
         </div>
 
         <div class="card" style="width: 18rem;">
-          <a href="adultos.html"><img src="Imagenes/Adultos/adultos.png" class="card-img-top" alt="..."></a>
+          <a href="adultos.html"><img src="Imagenes/Adultos/adultos.png" class="card-img-top" alt="Remeras para adultos"></a>
           <div class="card-body">
             <p class="card-text">Remeras para no perder el niño interior</p>
           </div>
