--- a/teens.html
+++ b/teens.html
@@ -50,7 +50,7 @@
 
     <section class="d-flex justify-content-around">
         <div class="card" style="width: 18rem;">
-            <img src="Imagenes/Teens/teen1.jpg" class="card-img-top" alt="...">
+            <img src="Imagenes/Teens/teen1.jpg" class="card-img-top" alt="Remera Bart">
             <div class="card-body">
               <h5 class="card-title">Barto!</h5>
               <p class="card-text">Remera con la rebeldía que necesitas!</p>
@@ -58,7 +58,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="Imagenes/Teens/teen2.jpg" class="card-img-top" alt="...">
+            <img src="Imagenes/Teens/teen2.jpg" class="card-img-top" alt="Remera Bugs Bunny">
             <div class="card-body">
               <h5 class="card-title">Bugs!</h5>
               <p class="card-text">Que hay de nuevo viejo?</p>
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="Imagenes/Teens/teen3.jpg" class="card-img-top" alt="...">
+            <img src="Imagenes/Teens/teen3.jpg" class="card-img-top" alt="Remera gato ovni">
             <div class="card-body">
               <h5 class="card-title">Gato</h5>
               <p class="card-text">El gato ovni no exis...</p>
