--- a/kids.html
+++ b/kids.html
@@ -50,7 +50,7 @@
 
     <section class="d-flex justify-content-around">
         <div class="card" style="width: 18rem;">
-            <img src="Imagenes/Kids/imagenkids1.jpg" class="card-img-top" alt="...">
+            <img src="Imagenes/Kids/imagenkids1.jpg" class="card-img-top" alt="Remera Arcoiris">
             <div class="card-body">
               <h5 class="card-title">Rainbow!</h5>
               <p class="card-text">Remera con muchos colores</p>
@@ -58,7 +58,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="Imagenes/Kids/imageneskids2.jpg" class="card-img-top" alt="...">
+            <img src="Imagenes/Kids/imageneskids2.jpg" class="card-img-top" alt="Remera Panal">
             <div class="card-body">
               <h5 class="card-title">Honey Moon</h5>
               <p class="card-text">Remera con mielcita!</p>
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="Imagenes/Kids/imagenkids3.jpg" class="card-img-top" alt="...">
+            <img src="Imagenes/Kids/imagenkids3.jpg" class="card-img-top" alt="Remera dinosaurio">
             <div class="card-body">
               <h5 class="card-title">Dino!</h5>
               <p class="card-text">Rawr! Quiere decir te amo en dinosaurio</p>
