en los siguientes cambios se efectuaron, efectos en las cartas, y el icono de whatsapp. También se agregó contenido como los más vendidos, y a su vez más productos a la galería de cada una de las secciones de productos. A su vez se incluyoó el nav bar en todos los archivos, como también se modificó el footer para reservar los derechos de la marca

--- a/index.html
+++ b/index.html
@@ -107,23 +107,48 @@ Nuestros diseños minimalistas son ideales para quienes disfrutan de los sutiles
 Nuestras remeras, unicas en su estilo, van a sacar la mejor versión de vos misma. ¿Que esperas para unirte a la onda Monkey?
             </p>
           </div>
-          <div class="col-5">
-            <img src="Imagenes/imagen4.jpeg" alt="" class="Imagen descriptiva de la empresa">
-          </div>
           </div>
       </div>
+    </section>
+
+    <!--Productos más vendidos-->
+    <section class="container-mas-vendidos">
+          <div class="mas-vendidos">
+            <h2 class="titulos-vendidos">Las cositas más vendidas!</h2>
+          </div>
+          <div>
+            <section>
+              <div class="container">
+                <div class="row">
+                  <div class="col">
+                    <img src="../DesafioNuevoBoot/Imagenes/Kids/imagenkids1.jpg" alt="" class="mas-vendidos">
+                  </div>
+                  <div class="col">
+                    <img src="../DesafioNuevoBoot/Imagenes/Teens/teen2.jpg" alt="" class="mas-vendidos">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <img src="../DesafioNuevoBoot/Imagenes/Adultos/adultos3.jpg" alt="" class="mas-vendidos">
+                  </div>
+                  <div class="col">
+                    <img src="../DesafioNuevoBoot/Imagenes/Kids/imageneskids2.jpg" alt="" class="mas-vendidos">
+                  </div>
+                  <div class="col">
+                    <img src="../DesafioNuevoBoot/Imagenes/Adultos/adultos1.jpg" alt="" class="mas-vendidos">
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+          </div>
 
     </section>
-    <!--enlace de vuelta incio-->
-    <div>
-      <a href="index.html" class="enlace-vuelta">Volvé arriba!</a>
-    </div>
 
     <!--pie de pagina-->
     <footer>
-      <!--Medios de pago-->
       <div class="container-footer">
-        <img src="Iconos/mediosdepago.png" alt="Metodos de pago" class="medios-pago">
+        <p class="texto-footer">Monkey 2021® Todos los derechos reservados. Buenos Aires, Argentina</p>
       </div>
 
     </footer>
